--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     <main>
         <div class="container">
             <p>
-                Bish-Bosh listar alla tal mellan 1 och ex.v. 100, med vissa undantag: Om talet är jämnt delbart
-                med ex.v. 3 listas 'Bish' ​istället ​för talet. Om talet är jämnt delbart med ex.v. 4 listas '​Bosh​' ​istället ​för
-                talet. Om talet är jämnt delbart med både med 3 och 4 skrivs '​Bish-Bosh' ​istället ​för talet. Inga negativa värden tillåts.
+                Bish-Bosh listar alla tal mellan 1 och ex.v. 100, med vissa undantag: Om talet är jämnt delbart med 'Bish-nr' 
+                listas 'Bish' istället för talet. Om talet är jämnt delbart med 'Bosh-nr' listas 'Bosh' istället för talet. 
+                Om talet är jämnt delbart med både 'Bish-nr' och 'Bosh-nr' skrivs 'Bish-Bosh' istället för talet. 
+                Endast positiva heltal tillåts.
             </p>
             <div class="row">
                 <div class="col-sm-0 col-md-1 col-lg-3"></div>
