--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
             <div class="row">
                 <div class="col-sm-0 col-md-1 col-lg-3"></div>
                 <div class="col-sm-12 col-md-9 col-lg-6" id="button-col">
-                    <a href="#" class="btn btn-primary" id="calculate-button" onclick='bishBosh()'>Calculate</a>
-                    <!-- <a href="#" class="btn btn-primary" id="calculate-button">Calculate</a> -->
+                    <a href="#" class="btn btn-primary" id="calculate-button">Calculate</a>
                 </div>
                 <div class="col-sm-0 col-md-2 col-lg-3"></div>
             </div>
